Fix pages permalink

--- a/001.1-Getting Started with Python.md
+++ b/001.1-Getting Started with Python.md
@@ -1,3 +1,8 @@
+---
+title: Getting Started with Python
+permalink: /001-1-Getting-Started-with-Python
+---
+
 # Getting Started with Python
 
 ## Overview
