--- a/001.1.7-Modules and Packages.md
+++ b/001.1.7-Modules and Packages.md
@@ -1,3 +1,8 @@
+---
+title: Modules and Packages in Python
+permalink: /001-1-7-Modules-and-Packages
+---
+
 # Lesson: Modules and Packages in Python
 
 ## Overview
