--- a/001.2-Variables and Data Types.md
+++ b/001.2-Variables and Data Types.md
@@ -1,3 +1,8 @@
+---
+title: Variables and Data Types in Python
+permalink: /001-2-Variables-and-Data-Types
+---
+
 # Lesson: Variables and Data Types in Python
 
 ## Overview
