--- a/001.5-Working with Collections.md
+++ b/001.5-Working with Collections.md
@@ -1,3 +1,8 @@
+---
+title: Working with Collections in Python
+permalink: /001-5-Working-with-Collections
+---
+
 # Lesson: Working with Collections in Python
 
 ## Overview
