--- a/001.1.2-Your First Python Program.md
+++ b/001.1.2-Your First Python Program.md
@@ -1,3 +1,8 @@
+---
+title: Your First Python Program
+permalink: /001-1-2-Your-First-Python-Program
+---
+
 # Lesson: Your First Python Program
 
 ## Overview
