--- a/001.1.4-Data Types and Structures.md
+++ b/001.1.4-Data Types and Structures.md
@@ -1,3 +1,8 @@
+---
+title: Data Types and Structures
+permalink: /001-1-4-Data-Types-and-Structures
+---
+
 # Lesson: Data Types and Structures in Python
 
 ## Overview
