--- a/001.1.5-Control Flow - If Statements and Loops.md
+++ b/001.1.5-Control Flow - If Statements and Loops.md
@@ -1,3 +1,8 @@
+---
+title: Control Flow - If Statements and Loops in Python
+permalink: /001-1-5-Control-Flow-If-Statements-and-Loops
+---
+
 # Lesson: Control Flow - If Statements and Loops in Python
 
 ## Overview
