--- a/001.3-Control Structures.md
+++ b/001.3-Control Structures.md
@@ -1,3 +1,8 @@
+---
+title: Control Structures in Python
+permalink: /001-3-Control-Structures
+---
+
 # Lesson: Control Structures in Python
 
 ## Overview
