Fix pages permalink

--- a/001.5.1-Lists.md
+++ b/001.5.1-Lists.md
@@ -1,6 +1,6 @@
 ---
 title: Understanding Lists in Python
-permalink: /001-5-1-Lists
+permalink: 001-5-1-Lists
 ---
 
 # Lesson: Understanding Lists in Python
