--- a/001.5.4-Dictionaries.md
+++ b/001.5.4-Dictionaries.md
@@ -1,6 +1,6 @@
 ---
 title: Dictionaries in Python
-permalink: /001-5-4-Dictionaries
+permalink: 001-5-4-Dictionaries
 ---
 
 # Lesson: Dictionaries in Python
