Add all other lessons

--- a/001.5-Working with Collections.md
+++ b/001.5-Working with Collections.md
@@ -18,11 +18,15 @@ Collections in Python provide a way to store multiple items in a single variable
 - **Accessing Elements**: Use indexing and slicing. Example: `fruits[0]` returns 'apple'.
 - **Manipulation**: Append, insert, remove, or sort items. Example: `fruits.append('orange')`
 
+Read more about [Lists in Python](001-5-1-Lists).
+
 ### Tuples
 
 - **Creation**: Use parentheses `()` to create a tuple. Example: `coordinates = (10.0, 20.0)`
 - **Accessing Elements**: Use indexing. Example: `coordinates[0]` returns 10.0.
 - **Immutability**: Tuples cannot be changed after creation.
+
+Read more about [Tuples in Python](001-5-2-Tuples).
 
 ### Sets
 
@@ -30,29 +34,42 @@ Collections in Python provide a way to store multiple items in a single variable
 - **Unique Elements**: Sets automatically remove duplicates.
 - **Operations**: Perform union, intersection, difference, and symmetric difference.
 
+Read more about [Sets in Python](001-5-3-Sets).
+
 ### Dictionaries
 
 - **Creation**: Use curly braces `{}` with key-value pairs. Example: `person = {'name': 'John', 'age': 30}`
 - **Accessing Elements**: Use keys. Example: `person['name']` returns 'John'.
 - **Manipulation**: Add, remove, or update key-value pairs.
 
+Read more about [Dictionaries in Python](001-5-4-Dictionaries).
+
 ### Iterating Through Collections
 
 - **For Loops**: Iterate over each item in a collection. Example: `for fruit in fruits: print(fruit)`
+
 - **List Comprehension**: Create new lists by applying an expression to each item in an existing list. Example: `[x.upper() for x in fruits]`
+
+Read more about [Iterating Through Collections](001-5-5-Iterating-Through-Collections).
 
 ### Conditional Statements in Collections
 
 - Use `if` statements to check for the presence of an item or to filter items. Example: `[x for x in fruits if 'a' in x]`
 
+Read more about [Conditional Statements in Python](001-5-6-Conditional-Statements-in-Collections).
+
 ### Functions for Collections
 
 - Python provides built-in functions like `len()`, `min()`, `max()`, and `sum()` for working with collections.
+
 - **Sorting**: Use the `sorted()` function for any iterable and the `.sort()` method for lists.
+
+Read more about [Functions for Collections](001-5-7-Functions-for-Collections).
 
 ### Advanced Techniques
 
 - **Nested Collections**: Store collections within collections. Example: `matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]`
+
 - **Unpacking**: Assign elements of a collection to multiple variables. Example: `x, y, z = coordinates`
 
 ## Conclusion
