--- a/001.1.1-Installing Python.md
+++ b/001.1.1-Installing Python.md
@@ -3,7 +3,7 @@ title: Introduction to Python
 permalink: 001-1-1-Introduction-to-Python
 ---
 
-# Lesson: Installing Python
+# Installing Python
 
 ## Overview
 This lesson covers the steps to successfully install Python on your computer. By the end of this lesson, you'll understand the different ways to install Python, how to verify the installation, and how to set up a virtual environment for Python projects.
