--- a/001.1.2-Your First Python Program.md
+++ b/001.1.2-Your First Python Program.md
@@ -3,7 +3,7 @@ title: Your First Python Program
 permalink: 001-1-2-Your-First-Python-Program
 ---
 
-# Lesson: Your First Python Program
+# Your First Python Program
 
 ## Overview
 In this lesson, we will guide you through writing your very first Python program. By the end of this lesson, you'll learn how to run a Python script that prints a message to the screen. This simple exercise will familiarize you with Python syntax and running Python scripts.
