--- a/001.1.3-Python Syntax Basics.md
+++ b/001.1.3-Python Syntax Basics.md
@@ -3,7 +3,7 @@ title: Python Syntax Basics
 permalink: 001-1-3-Python-Syntax-Basics
 ---
 
-# Lesson: Python Syntax Basics
+# Python Syntax Basics
 
 ## Overview
 This lesson introduces you to the basics of Python syntax. You'll learn about Python's simplicity and readability, and by the end, you'll understand the fundamental aspects of writing Python code, including variables, data types, comments, and basic operations.
