--- a/001.1.5-Control Flow - If Statements and Loops.md
+++ b/001.1.5-Control Flow - If Statements and Loops.md
@@ -3,7 +3,7 @@ title: Control Flow - If Statements and Loops in Python
 permalink: 001-1-5-Control-Flow-If-Statements-and-Loops
 ---
 
-# Lesson: Control Flow - If Statements and Loops in Python
+# Control Flow - If Statements and Loops in Python
 
 ## Overview
 In this lesson, we'll explore the control flow tools in Python, including `if` statements, loops (`for` and `while`), and how they enable decision-making and repetition in your code. By the end, you'll understand how to use these tools to control the execution flow of your Python programs.
