--- a/001.1.6-Functions in Python.md
+++ b/001.1.6-Functions in Python.md
@@ -3,7 +3,7 @@ title: Functions in Python
 permalink: 001-1-6-Functions-in-Python
 ---
 
-# Lesson: Functions in Python
+# Functions in Python
 
 ## Overview
 This lesson introduces functions in Python, crucial components for structuring and organizing reusable code. You'll learn about defining functions, passing parameters, return values, and some common practices to enhance your Python programming skills.
