--- a/001.1.7-Modules and Packages.md
+++ b/001.1.7-Modules and Packages.md
@@ -3,7 +3,7 @@ title: Modules and Packages in Python
 permalink: 001-1-7-Modules-and-Packages
 ---
 
-# Lesson: Modules and Packages in Python
+# Modules and Packages in Python
 
 ## Overview
 In this lesson, we'll explore the concepts of modules and packages in Python, essential tools for organizing and reusing code. By the end of this lesson, you'll understand how to create, import, and use modules and packages, enhancing the modularity and maintainability of your Python projects.
