--- a/001.2-Variables and Data Types.md
+++ b/001.2-Variables and Data Types.md
@@ -3,7 +3,7 @@ title: Variables and Data Types in Python
 permalink: 001-2-Variables-and-Data-Types
 ---
 
-# Lesson: Variables and Data Types in Python
+# Variables and Data Types in Python
 
 ## Overview
 This lesson revisits and delves deeper into variables and data types in Python. Understanding variables and the various data types available in Python is crucial for effective programming. By the end of this lesson, you will have a solid understanding of how to use variables and the different data types to store and manipulate data in your Python programs.
