--- a/001.3-Control Structures.md
+++ b/001.3-Control Structures.md
@@ -3,7 +3,7 @@ title: Control Structures in Python
 permalink: 001-3-Control-Structures
 ---
 
-# Lesson: Control Structures in Python
+# Control Structures in Python
 
 ## Overview
 In this lesson, we'll delve into the control structures in Python, which include conditional statements, loops, and comprehension expressions. These structures allow you to control the flow of your Python program based on conditions and iterations. By the end of this lesson, you'll understand how to use `if`, `elif`, and `else` statements, for and while loops, and comprehension techniques to make your code more efficient and readable.
