--- a/001.4-Functions.md
+++ b/001.4-Functions.md
@@ -3,7 +3,7 @@ title: Functions in Python
 permalink: 001-4-Functions
 ---
 
-# Lesson: Functions in Python
+# Functions in Python
 
 ## Overview
 In this lesson, we'll explore functions in Python, which are one of the fundamental building blocks of the language. Functions allow you to organize your code into reusable blocks, making your programs more modular, readable, and maintainable.
