--- a/001.5-Working with Collections.md
+++ b/001.5-Working with Collections.md
@@ -3,7 +3,7 @@ title: Working with Collections in Python
 permalink: 001-5-Working-with-Collections
 ---
 
-# Lesson: Working with Collections in Python
+# Working with Collections in Python
 
 ## Overview
 This lesson focuses on how to work with the various collection data types in Python, including lists, tuples, sets, and dictionaries. You'll learn how to create, access, manipulate, and iterate through these collections to effectively manage and use data in your Python programs.
