--- a/001.5.1-Lists.md
+++ b/001.5.1-Lists.md
@@ -3,7 +3,7 @@ title: Understanding Lists in Python
 permalink: 001-5-1-Lists
 ---
 
-# Lesson: Understanding Lists in Python
+# Understanding Lists in Python
 
 ## Overview
 Lists are one of Python's most versatile collection object types. They are used to store an ordered collection of items, which might be of different types but usually are of the same type. This lesson will cover creating lists, accessing list elements, list operations, and methods.
