--- a/001.5.2-Tuples.md
+++ b/001.5.2-Tuples.md
@@ -3,7 +3,7 @@ title: Tuples in Python
 permalink: 001-5-2-Tuples
 ---
 
-# Lesson: Tuples in Python
+# Tuples in Python
 
 ## Overview
 Tuples are one of the four built-in data types in Python used to store collections of data. They are similar to lists but have a crucial difference: tuples are immutable. This lesson will cover how to create, access, and use tuples, as well as their advantages and limitations.
