--- a/001.5.3-Sets.md
+++ b/001.5.3-Sets.md
@@ -3,7 +3,7 @@ title: Sets in Python
 permalink: 001-5-3-Sets
 ---
 
-# Lesson: Sets in Python
+# Sets in Python
 
 ## Overview
 This lesson covers sets in Python, a collection type that is unordered, mutable, and optimized for quickly checking whether an item is present. Sets are ideal for storing unique items and performing common mathematical set operations.
