--- a/001.5.4-Dictionaries.md
+++ b/001.5.4-Dictionaries.md
@@ -3,7 +3,7 @@ title: Dictionaries in Python
 permalink: 001-5-4-Dictionaries
 ---
 
-# Lesson: Dictionaries in Python
+# Dictionaries in Python
 
 ## Overview
 This lesson covers dictionaries, a powerful and flexible data structure in Python. Dictionaries allow you to store and manage data in key-value pairs, making it easy to access and manipulate data by key. By the end of this lesson, you'll understand how to create, access, modify, and use dictionaries for various tasks in Python programming.
