--- a/001.5.5-Iterating Through Collections.md
+++ b/001.5.5-Iterating Through Collections.md
@@ -3,7 +3,7 @@ title: Iterating Through Collections in Python
 permalink: 001-5-5-Iterating-Through-Collections
 ---
 
-# Lesson: Iterating Through Collections in Python
+# Iterating Through Collections in Python
 
 ## Overview
 In this lesson, we will cover how to iterate through the various collection data types in Python, including lists, tuples, sets, and dictionaries. Iterating through collections is a fundamental skill for accessing and manipulating data within these structures.
