--- a/001.5.6-Conditional Statements in Collections.md
+++ b/001.5.6-Conditional Statements in Collections.md
@@ -3,7 +3,7 @@ title: Conditional Statements in Collections
 permalink: 001-5-6-Conditional-Statements-in-Collections
 ---
 
-# Lesson: Conditional Statements in Collections in Python
+# Conditional Statements in Collections in Python
 
 ## Overview
 This lesson focuses on how to use conditional statements within collections in Python. Conditional statements, such as `if`, `elif`, and `else`, play a critical role in filtering, searching, and decision-making operations within collections like lists, dictionaries, sets, and tuples.
