--- a/001.5.7-Functions for Collections.md
+++ b/001.5.7-Functions for Collections.md
@@ -3,7 +3,7 @@ title: Functions for Collections in Python
 permalink: 001-5-7-Functions-for-Collections
 ---
 
-# Lesson: Functions for Collections in Python
+# Functions for Collections in Python
 
 ## Overview
 This lesson covers the various built-in functions Python provides for working with collections like lists, tuples, sets, and dictionaries. Understanding these functions allows you to perform common tasks on collections efficiently, such as calculating the length, finding the maximum and minimum values, and more.
@@ -52,7 +52,7 @@ Python offers a set of built-in functions that can be applied directly to collec
   - **`keys()`**: Returns a view object that displays a list of all the keys.
 
   - **`values()`**: Returns a view object that displays a list of all the values.
-  
+
   - **`items()`**: Returns a view object that displays a list of the dictionary's key-value tuple pairs.
 
 ### Using Functions in Iterations
