--- a/001.6-Modules and Packages.md
+++ b/001.6-Modules and Packages.md
@@ -3,7 +3,7 @@ title: Modules and Packages in Python
 permalink: 001-6-Modules-and-Packages
 ---
 
-# Lesson: Modules and Packages in Python
+# Modules and Packages in Python
 
 ## Overview
 This lesson explores modules and packages in Python, crucial components for organizing and reusing code across different parts of a Python project or among various projects. By the end of this lesson, you'll understand how to create, import, and use modules and packages to enhance the modularity and maintainability of your code.
