--- a/001.1.4-Data Types and Structures.md
+++ b/001.1.4-Data Types and Structures.md
@@ -3,7 +3,7 @@ title: Data Types and Structures
 permalink: 001-1-4-Data-Types-and-Structures
 ---
 
-# Lesson: Data Types and Structures in Python
+# Data Types and Structures in Python
 
 ## Overview
 This lesson dives into the data types and structures that Python offers, enabling you to store, manipulate, and access data efficiently. By the end of this lesson, you will understand the different data types, their characteristics, and how to use built-in data structures like lists, tuples, sets, and dictionaries.
