--- a/001.1-Getting Started with Python.md
+++ b/001.1-Getting Started with Python.md
@@ -18,11 +18,11 @@ Python is known for its simplicity and readability, making it an excellent choic
 
 ## Chapters
 
-### Chapter 1: Installing Python
+### [Chapter 1: Installing Python](001-1-1-Introduction-to-Python)
 - **Overview**: Instructions on how to download and install Python from the official website.
 - **Tools**: Use of the Python official website for downloads, and guidance on selecting the correct version.
 
-### Chapter 2: Your First Python Program
+### [Chapter 2: Your First Python Program](001-1-2-Your-First-Python-Program)
 - **Overview**: Writing and running a simple "Hello, World!" program.
 - **Example**:
     ```python
@@ -30,7 +30,7 @@ Python is known for its simplicity and readability, making it an excellent choic
     ```
 - **Tools**: Introduction to text editors and IDEs suitable for Python development, such as VSCode or PyCharm.
 
-### Chapter 3: Python Syntax Basics
+### [Chapter 3: Python Syntax Basics](001-1-3-Python-Syntax-Basics)
 - **Overview**: Understanding Python's syntax, including indentation, comments, and variables.
 - **Example**:
     ```python
@@ -39,25 +39,30 @@ Python is known for its simplicity and readability, making it an excellent choic
     print(my_variable)
     ```
 
-### Chapter 4: Data Types and Structures
+### [Chapter 4: Data Types and Structures](001-1-4-Data-Types-and-Structures)
 - **Overview**: Exploring Python's built-in data types and structures: strings, numbers, lists, tuples, dictionaries, and sets.
 - **Examples**: Demonstrations of each type and basic operations.
 
-### Chapter 5: Control Flow - If Statements and Loops
+### [Chapter 5: Control Flow - If Statements and Loops](001-1-5-Control-Flow-If-Statements-and-Loops)
 - **Overview**: Learning how to control the flow of your program using if statements, for loops, and while loops.
 - **Examples**: Simple examples showcasing conditional logic and iteration.
 
-### Chapter 6: Functions in Python
-- **Overview**: Introduction to defining and calling functions, understanding scope, and basic concepts of arguments and return values.
-- **Example**:
-    ```python
-    def greet(name):
-        return f"Hello, {name}!"
-    print(greet("Python Learner"))
-    ```
+### [Chapter 6: Functions in Python](001-1-6-Functions-in-Python)
 
-### Chapter 7: Modules and Packages
+- **Overview**: Introduction to defining and calling functions, understanding scope, and basic concepts of arguments and return values.
+
+- **Example**:
+
+```python
+def greet(name):
+    return f"Hello, {name}!"
+print(greet("Python Learner"))
+```
+
+### [Chapter 7: Modules and Packages](001-1-7-Modules-and-Packages)
+
 - **Overview**: Using Python's extensive standard library and installing third-party packages to extend functionality.
+
 - **Example**: Importing and using the `math` module.
 
 ### Conclusion
