--- a/001.1.6-Functions in Python.md
+++ b/001.1.6-Functions in Python.md
@@ -25,6 +25,53 @@ def greet(name):
     print(f"Hello, {name}!")
 ```
 
+### Built-in Functions
+
+Python comes with a set of built-in functions that are always accessible. These functions perform essential tasks and are an integral part of the Python language.
+
+#### Key Default Functions
+
+1. **`print()`**: Outputs data to the standard output device (screen).
+   - Example: `print("Hello, world!")`
+
+2. **`len()`**: Returns the length (number of items) of an object.
+   - Example: `len([1, 2, 3])` returns `3`.
+
+3. **`type()`**: Returns the type of an object.
+   - Example: `type(123)` returns `<class 'int'>`.
+
+4. **`input()`**: Allows user input.
+   - Example: `name = input("Enter your name: ")`
+
+5. **`int()`, `float()`, `str()`**: Convert objects to integers, floating-point numbers, and strings, respectively.
+   - Examples: `int("10")` returns `10`; `float("10.5")` returns `10.5`; `str(10)` returns `"10"`.
+
+6. **`range()`**: Generates a sequence of numbers.
+   - Example: `list(range(0, 5))` returns `[0, 1, 2, 3, 4]`.
+
+7. **`open()`**: Opens a file and returns a file object.
+   - Example: `file = open("file.txt", "r")`
+
+8. **`sorted()`**: Returns a new sorted list from the items in an iterable.
+   - Example: `sorted([3, 1, 2])` returns `[1, 2, 3]`.
+
+9. **`max()`** and **`min()`**: Return the largest and smallest items in an iterable.
+   - Example: `max([1, 2, 3])` returns `3`; `min([1, 2, 3])` returns `1`.
+
+10. **`sum()`**: Sums items of an iterable from left to right.
+    - Example: `sum([1, 2, 3])` returns `6`.
+
+#### Advanced Default Functions
+
+1. **`enumerate()`**: Adds a counter to an iterable and returns it as an enumerate object.
+   - Example: `list(enumerate(["a", "b", "c"]))` returns `[(0, 'a'), (1, 'b'), (2, 'c')]`.
+
+2. **`zip()`**: Makes an iterator that aggregates elements from each of the iterables.
+   - Example: `list(zip([1, 2], ['a', 'b']))` returns `[(1, 'a'), (2, 'b')]`.
+
+3. **`map()`** and **`filter()`**: Apply a function to all the items in an input list and filter items out of a sequence, respectively.
+   - Examples: `list(map(lambda x: x*2, [1, 2, 3]))` returns `[2, 4, 6]`; `list(filter(lambda x: x > 1, [1, 2, 3]))` returns `[2, 3]`.
+
 ### Calling a Function
 
 To execute a function, you call it by its name followed by parentheses. If the function requires parameters, you provide the values within these parentheses.
