--- a/001.1.2-Your First Python Program.md
+++ b/001.1.2-Your First Python Program.md
@@ -37,6 +37,12 @@ Run the Script: Type python hello_world.py and press Enter. You should see the m
 print("Hello, World!")  # This prints a message
 ```
 
+## Ready to Run Your First Python Program?
+
+Now that you've written your first Python program, you're ready to explore more complex concepts and applications. This simple exercise is just the beginning of your journey with Python.
+
+[Project: Your First Python Program](project/001-1-2-Your-First-Python-Program)
+
 ### Conclusion
 
 Congratulations on running your first Python program! This step is just the beginning of your journey with Python. As you continue learning, you'll discover the vast capabilities and applications of Python across different fields.
