--- a/001.1.5-Control Flow - If Statements and Loops.md
+++ b/001.1.5-Control Flow - If Statements and Loops.md
@@ -1,5 +1,6 @@
 ---
 title: Control Flow - If Statements and Loops in Python
+comments: true
 permalink: 001-1-5-Control-Flow-If-Statements-and-Loops
 ---
 
