--- a/010.1-Asynchronous Programming (asyncio).md
+++ b/010.1-Asynchronous Programming (asyncio).md
@@ -1,5 +1,6 @@
 ---
 title: Asynchronous Programming (asyncio) in Python
+comments: true
 permalink: 010-1-Asynchronous-Programming-(asyncio)
 ---
 
